feat: add status badges and i18n for Classes menu

--- a/translations/ca.json
+++ b/translations/ca.json
@@ -4,6 +4,7 @@
   "EDIT_MENU_NAME": "Editar Vista",
   "SHUTDOWN_MENU_NAME": "Encendre/Apagar",
   "CONFIGURE_MENU_NAME": "Editar config.js",
+  "CLASSES_MENU_NAME": "Classes",
   "VIEW_MIRROR": "MagicMirror²",
   "LINKS": "Enllaços",
   "API_DOCS": "Documentació de l'API",
