--- a/translations/da.json
+++ b/translations/da.json
@@ -4,6 +4,7 @@
   "EDIT_MENU_NAME": "Udseende",
   "SHUTDOWN_MENU_NAME": "Strøm",
   "CONFIGURE_MENU_NAME": "Rediger config.js",
+  "CLASSES_MENU_NAME": "Klasser",
   "VIEW_MIRROR": "MagicMirror²",
   "LINKS": "Links",
   "API_DOCS": "API-dokumentation",
