--- a/translations/de.json
+++ b/translations/de.json
@@ -4,6 +4,7 @@
   "EDIT_MENU_NAME": "Ansicht bearbeiten",
   "SHUTDOWN_MENU_NAME": "Energieoptionen",
   "CONFIGURE_MENU_NAME": "Einstellungen",
+  "CLASSES_MENU_NAME": "Klassen",
   "VIEW_MIRROR": "MagicMirror²",
   "LINKS": "Links",
   "API_DOCS": "API-Dokumentation",
