--- a/translations/es.json
+++ b/translations/es.json
@@ -4,6 +4,7 @@
   "EDIT_MENU_NAME": "Editar Vista",
   "SHUTDOWN_MENU_NAME": "Encendido",
   "CONFIGURE_MENU_NAME": "Editar config.js",
+  "CLASSES_MENU_NAME": "Clases",
   "VIEW_MIRROR": "MagicMirror²",
   "LINKS": "Enlaces",
   "API_DOCS": "Documentación de la API",
