--- a/translations/id.json
+++ b/translations/id.json
@@ -4,6 +4,7 @@
   "EDIT_MENU_NAME": "Sunting tampilan",
   "SHUTDOWN_MENU_NAME": "Power",
   "CONFIGURE_MENU_NAME": "Sunting config.js",
+  "CLASSES_MENU_NAME": "Kelas",
   "VIEW_MIRROR": "MagicMirror²",
   "LINKS": "Tautan",
   "API_DOCS": "Dokumentasi API",
