--- a/translations/it.json
+++ b/translations/it.json
@@ -4,6 +4,7 @@
   "EDIT_MENU_NAME": "Modifica vista",
   "SHUTDOWN_MENU_NAME": "Alimentazione",
   "CONFIGURE_MENU_NAME": "Modifica config.js",
+  "CLASSES_MENU_NAME": "Classi",
   "VIEW_MIRROR": "MagicMirror²",
   "LINKS": "Link",
   "API_DOCS": "Documentazione API",
