--- a/translations/nl.json
+++ b/translations/nl.json
@@ -4,6 +4,7 @@
   "EDIT_MENU_NAME": "Aanzicht aanpassen",
   "SHUTDOWN_MENU_NAME": "Stroom",
   "CONFIGURE_MENU_NAME": "config.js aanpassen",
+  "CLASSES_MENU_NAME": "Klassen",
   "VIEW_MIRROR": "MagicMirror²",
   "LINKS": "Links",
   "API_DOCS": "API-documentatie",
