--- a/translations/pt.json
+++ b/translations/pt.json
@@ -4,6 +4,7 @@
   "EDIT_MENU_NAME": "Editar a aparência",
   "SHUTDOWN_MENU_NAME": "Ligar/Desligar",
   "CONFIGURE_MENU_NAME": "Editar o config.js",
+  "CLASSES_MENU_NAME": "Classes",
   "VIEW_MIRROR": "MagicMirror²",
   "LINKS": "Ligações",
   "API_DOCS": "Documentação da API",
