--- a/translations/sv.json
+++ b/translations/sv.json
@@ -4,6 +4,7 @@
   "EDIT_MENU_NAME": "Editera synlighet",
   "SHUTDOWN_MENU_NAME": "Av och På",
   "CONFIGURE_MENU_NAME": "Editera config.js",
+  "CLASSES_MENU_NAME": "Klasser",
   "VIEW_MIRROR": "MagicMirror²",
   "LINKS": "Länkar",
   "API_DOCS": "API-dokumentation",
