--- a/translations/tr.json
+++ b/translations/tr.json
@@ -4,6 +4,7 @@
   "EDIT_MENU_NAME": "Görünümü Düzenle",
   "SHUTDOWN_MENU_NAME": "Güç",
   "CONFIGURE_MENU_NAME": "config.js dosyasını düzenle",
+  "CLASSES_MENU_NAME": "Sınıflar",
   "VIEW_MIRROR": "MagicMirror²",
   "LINKS": "Bağlantılar",
   "API_DOCS": "API Dokümantasyonu",
