--- a/translations/nb.json
+++ b/translations/nb.json
@@ -4,6 +4,7 @@
   "EDIT_MENU_NAME": "Rediger visning",
   "SHUTDOWN_MENU_NAME": "Strøm",
   "CONFIGURE_MENU_NAME": "Rediger config.js",
+  "CLASSES_MENU_NAME": "Klasser",
   "VIEW_MIRROR": "MagicMirror²",
   "LINKS": "Lenker",
   "API_DOCS": "API-dokumentasjon",
