refactor: remove PM2 dependency, add universal process manager support
Replace PM2-specific restart/stop logic with universal approach:
- Desktop mode (Electron): app.relaunch() + app.quit()
- Server mode: process.exit(0) for clean restart, exit(1) for stop
- Wait for HTTP response via res.on('finish') before exit

Changes:
- Add handleRestart() and handleStop() replacing controlPm2()
- Fix shutdown/reboot: detect sudo password errors, show helpful message
- Update translations: RESTART→REBOOT, add CONFIRM_RESTARTMM
- Improve MINIMIZE hint: "restart to restore" instead of "cannot undo"
- Add missing translation keys (FULLSCREEN, MINIMIZE, DEVTOOLS)
- Update docs (README, FAQ with sudo setup guide, swagger.json)
- Remove all PM2 references from code and documentation
- Add error logging in catch blocks for better debugging

The `pm2ProcessName` config option is no longer used (silently ignored).
Restart now works automatically with any process manager (systemd, PM2,
Docker, etc.) configured to restart on exit code 0.

--- a/translations/ca.json
+++ b/translations/ca.json
@@ -20,11 +20,11 @@
   "MONITOROFF": "Apagar monitor",
   "MONITORON": "Encendre monitor",
   "MONITORTIMED": "Encendre monitor breument",
-  "RESTART": "Reiniciar RPi",
-  "RESTARTMM": "Recarregar MagicMirror²",
-  "SHUTDOWN": "Apagar RPi",
+  "REBOOT": "Reiniciar sistema",
+  "RESTARTMM": "Reiniciar MagicMirror²",
+  "SHUTDOWN": "Apagar sistema",
   "FULLSCREEN": "Pantalla sencera",
-  "MINIMIZE": "Minimitzar Navegador",
+  "MINIMIZE": "Minimitzar (reiniciar per restaurar)",
   "DEVTOOLS": "Obrir Eines per desenvolupadors",
 
   "SHOWALL": "Mostrar Tots",
@@ -61,7 +61,8 @@
   "NO_RISK_NO_FUN": "Qui no arrisca no pisca!",
 
   "CONFIRM_SHUTDOWN": "El sistema s'apagarà.",
-  "CONFIRM_RESTART": "El sistema es recarregarà.",
+  "CONFIRM_REBOOT": "El sistema es reiniciarà.",
+  "CONFIRM_RESTARTMM": "El MagicMirror² es reiniciarà.",
 
   "LOAD_ERROR": "Si ves este mensaje, un error ha ocurrido cargando el archivo javascript. Si us plau, revisa aquest enllaç per veure si es un problema amb el teu navegador:",
   "ISSUE_LINK": "Pàgina de problemes de Github",
