--- a/translations/ca.json
+++ b/translations/ca.json
@@ -19,7 +19,6 @@
   "REFRESHMM": "Recarregar Navegador",
   "MONITOROFF": "Apagar monitor",
   "MONITORON": "Encendre monitor",
-  "MONITORTIMED": "Encendre monitor breument",
   "REBOOT": "Reiniciar sistema",
   "RESTARTMM": "Reiniciar MagicMirror²",
   "SHUTDOWN": "Apagar sistema",
@@ -40,7 +39,6 @@
   "BY": "per",
   "ADD_THIS": "Afegir aquest mòdul",
   "HELP": "Veure Readme",
-  "MENU": "Menú",
   "RESET": "Reset",
   "NO_HEADER": "(sense capcelera)",
   "NO_POSITION": "(invisible)",
@@ -57,8 +55,6 @@
   "SAVE": "Guardar",
 
   "EXPERIMENTAL": "Aquesta es una funciò experimental, pot corrompre el teu arxiu config. Fes còpia de seguretat primer, per si de cas!",
-  "PANIC": "No m'importa.",
-  "NO_RISK_NO_FUN": "Qui no arrisca no pisca!",
 
   "CONFIRM_SHUTDOWN": "El sistema s'apagarà.",
   "CONFIRM_REBOOT": "El sistema es reiniciarà.",
@@ -69,14 +65,13 @@
 
   "DONE": "Fet.",
   "ERROR": "Error!",
+  "INFO": "Informació",
   "LOADING": "Carregant …",
 
   "LOCKSTRING_WARNING": "Aquest mòdul ha estat ocultat per LIST_OF_MODULES, no pot ser mostrat.",
   "FORCE_SHOW": "Fes-ho igualment.",
 
   "UPDATE_MENU_NAME": "Actualitzacions",
-  "UPDATEMM": "Actualitza MagicMirror²",
-  "UPDATE_AVAILABLE": "Actualitzaciò disponible",
 
   "ALERT_MENU_NAME": "Alertes / Notificacions",
   "SENDALERT": "Envia alerta",
