--- a/translations/nb.json
+++ b/translations/nb.json
@@ -19,7 +19,6 @@
   "REFRESHMM": "Oppdater nettleseren",
   "MONITOROFF": "Slå av skjermen",
   "MONITORON": "Slå på skjermen",
-  "MONITORTIMED": "Slå skjermen på kort",
   "REBOOT": "Omstart system",
   "RESTARTMM": "Omstart MagicMirror²",
   "SHUTDOWN": "Slå av",
@@ -40,7 +39,6 @@
   "BY": "av",
   "ADD_THIS": "Legg til denne modulen",
   "HELP": "Vis readme",
-  "MENU": "Meny",
   "RESET": "Reset",
   "NO_HEADER": "(ingen topptekst)",
   "NO_POSITION": "(usynlig)",
@@ -57,8 +55,6 @@
   "SAVE": "Lagre",
 
   "EXPERIMENTAL": "Dette er en eksperimentell funksjon, det kan ødelegge konfigurasjonsfilen din. Sikkerhetskopier din konfigurasjon først, bare i tilfelle!",
-  "PANIC": "Glem det.",
-  "NO_RISK_NO_FUN": "Ingen risiko, ingen morro!",
 
   "CONFIRM_SHUTDOWN": "Systemet slås av.",
   "CONFIRM_REBOOT": "Systemet vil starte på nytt.",
@@ -69,14 +65,13 @@
 
   "DONE": "Ferdig.",
   "ERROR": "Feil!",
+  "INFO": "Info",
   "LOADING": "Laster …",
 
   "LOCKSTRING_WARNING": "Denne modulen ble skjult av LIST_OF_MODULES, det kan ikke vises.",
   "FORCE_SHOW": "Gjør det likevel.",
 
   "UPDATE_MENU_NAME": "Oppdateringer",
-  "UPDATEMM": "Oppdater MagicMirror²",
-  "UPDATE_AVAILABLE": "Oppdatering tilgjengelig",
 
   "ALERT_MENU_NAME": "Varsling",
   "SENDALERT": "Send",
@@ -88,5 +83,9 @@
   "FORM_TITLE_PLACEHOLDER": "Skriv inn tittel...",
   "FORM_MESSAGE": "Beskjed:",
   "FORM_MESSAGE_PLACEHOLDER": "Skriv inn melding...",
-  "FORM_SECONDS": "Sekunder:"
+  "FORM_SECONDS": "Sekunder:",
+
+  "RESPONSE_ERROR": "Det fungerte ikke. Sjekk MM-loggene for flere detaljer.",
+  "MODULE_CONTROLS": "Modulkontroller",
+  "CUSTOM_MENU": "Min Tilpassede Meny"
 }
