feat: add notification sender to remote.html
Add a new "Notification" menu entry that lets users send arbitrary
module notifications (name + optional JSON payload) directly from the
remote interface — useful for quick testing without relying on the API
URL syntax.

Closes #383.

--- a/translations/en.json
+++ b/translations/en.json
@@ -75,6 +75,14 @@
 
   "ALERT_MENU_NAME": "Alert",
   "SENDALERT": "Send",
+  "NOTIFICATION_MENU_NAME": "Notification",
+  "SEND_NOTIFICATION": "Send",
+  "FORM_NOTIFICATION_NAME": "Notification:",
+  "FORM_NOTIFICATION_NAME_PLACEHOLDER": "MY_NOTIFICATION",
+  "FORM_NOTIFICATION_NAME_MISSING": "Please enter a notification name.",
+  "FORM_NOTIFICATION_PAYLOAD": "Payload (JSON, optional):",
+  "FORM_NOTIFICATION_PAYLOAD_PLACEHOLDER": "{\"key\": \"value\"}",
+  "INVALID_JSON": "Invalid JSON payload.",
   "HIDEALERT": "Hide",
   "FORM_TYPE": "Type:",
   "FORM_ALERT": "Alert",
