--- a/translations/de.json
+++ b/translations/de.json
@@ -75,6 +75,14 @@
 
   "ALERT_MENU_NAME": "Alert",
   "SENDALERT": "Senden",
+  "NOTIFICATION_MENU_NAME": "Notification",
+  "SEND_NOTIFICATION": "Senden",
+  "FORM_NOTIFICATION_NAME": "Notification:",
+  "FORM_NOTIFICATION_NAME_PLACEHOLDER": "MY_NOTIFICATION",
+  "FORM_NOTIFICATION_NAME_MISSING": "Bitte einen Notification-Namen eingeben.",
+  "FORM_NOTIFICATION_PAYLOAD": "Payload (JSON, optional):",
+  "FORM_NOTIFICATION_PAYLOAD_PLACEHOLDER": "{\"key\": \"value\"}",
+  "INVALID_JSON": "Ungültiger JSON-Payload.",
   "HIDEALERT": "Verstecken",
   "FORM_TYPE": "Typ:",
   "FORM_ALERT": "Groß",
